--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 alloy = { version = "0.8", features = ["full","node-bindings",] }
+dotenv = "0.15.0"
 eyre = "0.6.12"
 tokio = { version = "1.42.0", features = ["full"] }
