--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ alloy = { version = "0.8", features = ["full","node-bindings",] }
 dotenv = "0.15.0"
 eyre = "0.6.12"
 tokio = { version = "1.42.0", features = ["full"] }
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
